[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BossMeaner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=2]

[node name="BossMeaner" type="Node2D"]
script = ExtResource( 1 )

[node name="BossSprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="BossLabel" type="Label" parent="HealthBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -7.0
margin_right = 110.0
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MISTER MEANER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitTween" type="Tween" parent="."]
